@@ -1,3 +1,8 @@
+2002-01-17  Joe Shaw  <joe@ximian.com>
+
+	* src/libsoup/soup-message.c: Add soup_message_get_http_version()
+	function.
+
 2002-01-08  Alex Graveley  <alex@ximian.com>
 
 	* src/libsoup/soup-error.h: Add SOUP_ERROR_MOVED_TEMPORARILY
